fixeing bacg overflow

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  background-image: url("../images/bg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   height: 100vh;
@@ -7,8 +8,9 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 100px;
-  padding-top: 90px;
+  gap: 30px;
+  padding-top: 10px;
+  overflow: hidden;
 }
 body #recipes-container {
   width: 90%;
