--- a/styles/_cards.scss
+++ b/styles/_cards.scss
@@ -1,6 +1,6 @@
 //styler lintro
 body {
-  // background-image: $bgImage;
+  background-image: $bgImage;
   background-size: cover;
   background-repeat: no-repeat;
   height: 100vh;
@@ -9,8 +9,9 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 100px;
-  padding-top: 90px;
+  gap: 30px;
+  padding-top: 10px;
+  overflow: hidden;
   
   #recipes-container {
     width: 90%;
